k8s/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: country-frontend
  namespace: country-app
spec:
  selector:
    app: country-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
